mariadb.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tefa-mariadb
  labels:
    app: tefa-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tefa-mariadb
  template:
    metadata:
      name: tefa-mariadb
      labels:
        app: tefa-mariadb
    spec:
      containers:
        - name: tefa-mariadb
          image: telkomindonesia/debian:mariadb-10.2
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 3306
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: tefa-mariadb-service
spec:
  selector:
    app: tefa-mariadb
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
