article-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tefa-be-article-app
  labels:
    app: tefa-be-article-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tefa-be-article-app
  template:
    metadata:
      name: tefa-be-article-app
      labels:
        app: tefa-be-article-app
    spec:
      containers:
        - name: tefa-be-article-app
          image: shinyq11/tefa-deployment
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service 
metadata:
  name: tefa-be-article-app-service
spec:
  selector:
    app: tefa-be-article-app
  ports:
  - port: 80
    targetPort: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: tefa-be-article-app-ingress
  labels:
    app: tefa-be-article-app-ingress
spec:
  rules:
  - host: tefa-be-article-app.kurniadi.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tefa-be-article-app-service
            port:
              number: 80
